--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "effectus",
   "version": "1.0.0",
   "description": "web-based task manager",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -13,4 +13,8 @@
     "gtd"
   ],
   "author": "Keith Murray",
-  "license": "MIT"}
+  "license": "MIT",
+  "dependencies": {
+    "express": "^4.16.3"
+  }
+}
