--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "Keith Murray",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "mongoose": "^5.2.3"
   }
 }
